Refs #141282 - Fix clear btn on small screen issue.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -208,7 +208,6 @@ div#page-document {
         background: @sf-light-gray !important;
         border-radius: 2px;
         color: @sf-azure !important;
-        float: left;
         font-size: 12px;
       }
 
@@ -302,6 +301,7 @@ div#page-document {
 
             span.clear-filters {
               color: @sf-azure;
+              float: left;
               font-size: 14px;
             }
           }
@@ -1113,6 +1113,13 @@ div.ui.modal.facet {
           margin-top: 0px !important;
         }
       }
+    }
+  }
+
+  div.filter-list-item.more-like-this {
+    i.icon.delete {
+      top: 23px !important;
+      right: 23px !important;
     }
   }
 }
